--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>قائمة طعام محل منقوش</title>
+  <title>معجنات العبد</title>
   <link
   href="https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&display=swap"
   rel="stylesheet"
@@ -18,7 +18,7 @@
       <img src="abedlogo.jpeg" alt="شعار المحل" class="header-logo">
       <div class="shop-text">
         <h1>معجنات العبد</h1>
-        <p>📍 طرابلس، لبنان</p>
+        <p>📍 طرابلس الزاهرية شارع لطيفة خلف مدرسة جبران</p>
         <p>🕒 5:00 صباحًا - 3:00 مساءً</p>
         <p>📞 70233623</p>
       </div>
@@ -28,7 +28,7 @@
 
   <main>
     <section class="menu">
-      <h2>قائمة الطعام</h2>
+      <h2>قائمة المعجنات</h2>
       <div id="menu-container" class="menu-container"></div>
     </section>
   </main>
